# rock-paper-scissors

./: .gitignore  CMakeLists.txt  README.md  TODO  game.c  game.h  game_actions.c  game_actions.h  main  main.c  start.sh  test.c  test.sh
include/: Game.hpp  Program.hpp  Round.hpp  ScoreSaving.h  game.h
scripts/: start.sh  test.sh
src/: Entry.cpp  Game.cpp  Program.cpp  ScoreSaving.cpp  game.cpp  main.c  main.cpp
tests/: CMakeLists.txt  test.cpp
